fixed overflow scroll bug on iphone

--- a/scss/blocks/_address-card.scss
+++ b/scss/blocks/_address-card.scss
@@ -54,9 +54,13 @@
             text-align-last: left;
             display: none;
             @include small {
-                display: block;
+                display: flex;
+                justify-content: start;
             }
         }
+    }
+    &__currency {
+        margin-left: 5px;
     }
 
 }
