--- a/scss/blocks/_address.scss
+++ b/scss/blocks/_address.scss
@@ -1,6 +1,9 @@
 .address {
     padding: 0;
     border: none;
+    @include small {
+        padding-left: 16px;
+    }
     &__top-wrapper {
         display: flex;
         justify-content: space-between;
@@ -45,7 +48,7 @@
         }
         @include small {
             max-width: 90vw;
-            overflow: hidden;
+            overflow: scroll;
         }
     }
     &__check:checked + .address-card {
