--- a/scss/blocks/_options.scss
+++ b/scss/blocks/_options.scss
@@ -4,6 +4,10 @@
     flex-direction: column;
     gap: 14px;
     border: none;
+    @include small {
+        padding-left: 16px;
+        padding-right: 16px;
+    }
     &__descr {
         @include text-regular;
         display: flex;
