--- a/scss/blocks/_order-form.scss
+++ b/scss/blocks/_order-form.scss
@@ -14,7 +14,7 @@
         padding-left: 20px;
     }
     @include small {
-        padding: 24px 16px 32px 16px;
+        padding: 24px 0 32px 0;
     }
     &__address {
         margin: 0;
